--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Moch. Abdu Hanifan</h3>
-      <p>Terima Kasih telah berkunjung ke Website Pribadi Saya...</p>
+      <p>Terima Kasih, telah berkunjung di Website Pribadi Saya..</p>
       <div class="social-links">
         <a href="https://web.facebook.com/hanifan.mAhDev/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/abduhanifan/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
