--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website :</strong> <span>abduhanifan.github.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website :</strong> <span>abduhanifan.github.io/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Gelar :</strong> <span>Diploma3</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email :</strong> <span>abduhanifan0@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance :</strong> <span>Tersedia</span></li>
