--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Motto :</strong> <span>Man Jadda Wajada</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Hobi :</strong> <span>Ngoding | Membaca | Travelling</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Hp :</strong> <span>0813 2444 5469</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Handphone :</strong> <span>0813 2444 5469</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Kota :</strong> <span>Indramayu, Jawa Barat - Indonesia</span></li>
                 </ul>
               </div>
